fix: adjust position of cross icon in App.css for better alignment

--- a/pawa-sure/src/App.css
+++ b/pawa-sure/src/App.css
@@ -485,7 +485,7 @@ button:active{
     .cross{
         position: absolute;
         right: 0rem;
-        top: 10rem;
+        top: 11.5rem;
 
     }
 
